openshift-services/service-mesh/gateway-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
